!COMMIT NEED FIX! Refactored code, changed width of scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,12 +10,12 @@ body {
 
 /* Scrollbar styles for light theme */
 *::-webkit-scrollbar {
-  width: 2px;
+  width: 4px;
   height: 6px;
 }
 
 *::-webkit-scrollbar-track {
-  border-radius: 6px;
+  border-radius: 8px;
   background-color: #dfe9eb;
 }
 
@@ -41,12 +41,12 @@ body {
 
 /* Scrollbar styles for dark theme */
 .dark *::-webkit-scrollbar {
-  width: 2px;
+  width: 4px;
   height: 6px;
 }
 
 .dark *::-webkit-scrollbar-track {
-  border-radius: 6px;
+  border-radius: 8px;
   background-color: #dfe9eb;
 }
 
